@@ -1,4 +1,10 @@
-$Id: NEWS,v 1.558 2004-04-28 17:52:46 castaglia Exp $
+$Id: NEWS,v 1.559 2004-04-29 01:55:21 castaglia Exp $
+
+CVS
+---------------------------------
+- Bug 2396 - NLST command doesn't understand options.  This was caused by
+  the solution for Bug 2322.  However, it is not a popular solution, so
+  NLST will once again handle options, but only the relevant options.
 
 1.2.10rc1 - Released 28-Apr-2004
 ---------------------------------
